@@ -24,7 +24,7 @@
 #define TAILIZE(p) while(*p){ p++; }
 
 void *cbcreate(void){
-	return bsdconv_create("PASS:CNS11643:PASS");
+	return bsdconv_create("CNS11643");
 }
 
 void cbdestroy(void *p){
